templates/default/css/slideshow.css
@media screen and (min-width: 1280px) {
    html {
        font-size: 18pt;
    }
}

.timedorbit {
  position: relative; }

.timedorbit-container {
  position: relative;
  height: 0;
  margin: 0;
  list-style: none;
  overflow: hidden; }

@media screen and (min-height: 850px) {
    .timedorbit-container {
        height: 850px;
    }
}

@media screen and (min-height: 700px) and (max-height: 849px) {
    html {
        font-size: 18pt;
    }
    .timedorbit-container {
        height: 720px;
    }
    .bigscreen {
        display: none;
    }
}

@media screen and (max-height: 699px) {
    .timedorbit-container {
        height: 600px;
    }
    .bigscreen {
        display: none;
    }
}


.timedorbit-slide {
  width: 100%; }
  .timedorbit-slide.no-motionui.is-active {
    top: 0;
    left: 0; }

.timedorbit-figure {
  margin: 0; }

.timedorbit-image {
  width: 100%;
  max-width: 100%;
  margin: 0; }

.timedorbit-caption {
  position: absolute;
  bottom: 0;
  width: 100%;
  margin-bottom: 0;
  padding: 1rem;
  background-color: rgba(10, 10, 10, 0.5);
  color: #fefefe; }

.timedorbit-previous, .timedorbit-next {
  position: absolute;
  top: 50%;
  -ms-transform: translateY(-50%);
      transform: translateY(-50%);
  z-index: 10;
  padding: 1rem;
  color: #fefefe; }
  [data-whatinput='mouse'] .timedorbit-previous, [data-whatinput='mouse'] .timedorbit-next {
    outline: 0; }
  .timedorbit-previous:hover, .timedorbit-next:hover, .timedorbit-previous:active, .timedorbit-next:active, .timedorbit-previous:focus, .timedorbit-next:focus {
    background-color: rgba(10, 10, 10, 0.5); }

.timedorbit-previous {
  left: 0; }

.timedorbit-next {
  left: auto;
  right: 0; }

.timedorbit-bullets {
  position: relative;
  margin-top: 0.8rem;
  margin-bottom: 0.8rem;
  text-align: center; }
  [data-whatinput='mouse'] .timedorbit-bullets {
    outline: 0; }
  .timedorbit-bullets button {
    width: 1.2rem;
    height: 1.2rem;
    margin: 0.1rem;
    border-radius: 50%;
    background-color: #cacaca; }
    .timedorbit-bullets button:hover {
      background-color: #8a8a8a; }
    .timedorbit-bullets button.is-active {
      background-color: #8a8a8a; }

.footer {
    font-size: 0.75rem;
}

.stopwatch, img.tellus {
    height: 3rem;
    width: 3rem;
}

div.tellus {
    font-size: 0.6rem;
    white-space: nowrap;
    margin-top: 1em;
}

.slide-content a {
    color: #fff !important;
    font-weight: bold;
}

.timedorbit-slide {
    height: 100%;
}

.timedorbit-slide .slide-title {
    font-size: 1.5rem;
    border-bottom: 1px solid #ddd;
    margin-bottom: 0.3rem;
}

.timedorbit-slide .slide-content > h3 {
    font-size: 1.25rem;
}

.timedorbit-slide .slide-posted {
    font-size: 0.8rem;
    margin-bottom: 0.5rem;
}

.timedorbit-slide .slide-byline {
    line-height: 1.2;
}

.timedorbit-slide .slide-byline img {
    margin-right: 0.25rem;
    border-radius: 0.3rem;
}

.timedorbit-slide {
    padding: 2rem 2rem;
    color: #fff;
}

.timedorbit-slide img.article {
    max-width: 40% !important;
}

.timedorbit-slide.type0 {
    background: dodgerblue;
}
.timedorbit-slide.type0 .slide-title {
    border-bottom-color: #cce6ff;
}

.timedorbit-slide.type1 {
    background: darkmagenta;
}
.timedorbit-slide.type1 .slide-title {
    border-bottom-color: #ffccff;
}

.timedorbit-slide.type2 {
    background: rebeccapurple;
}
.timedorbit-slide.type2 .slide-title {
    border-bottom-color: #e6d9f2;
}

.timedorbit-slide.type3 {
    background: darkgoldenrod;
}
.timedorbit-slide.type3 .slide-title {
    border-bottom-color: #fcefcf;
}

.timedorbit-slide.type4 {
    background: lightseagreen;
}
.timedorbit-slide.type4 .slide-title {
    border-bottom-color: #d4f7f6;
}

.timedorbit-slide.type5 {
    background: seagreen;
}
.timedorbit-slide.type5 .slide-title {
    border-bottom-color: #d9f2e4;
}

.timedorbit-slide.type6 {
    background: slategray;
}
.timedorbit-slide.type6 .slide-title {
    border-bottom-color: #e2e6e9;
}

.timedorbit-slide.type7 {
    background: steelblue;
}
.timedorbit-slide.type7 .slide-title {
    border-bottom-color: #dae7f1;
}

.timedorbit-slide.type8 {
    background: sienna;
}
.timedorbit-slide.type8 .slide-title {
    border-bottom-color: #f4e0d7;
}

.timedorbit-slide.type9 {
    background: purple;
}
.timedorbit-slide.type9 .slide-title {
    border-bottom-color: #ffccff;
}

.timedorbit-slide.typeA {
    background: peru;
}
.timedorbit-slide.typeA .slide-title {
    border-bottom-color: #f5e6d6;
}

.timedorbit-slide.typeB {
    background: midnightblue;
}
.timedorbit-slide.typeB .slide-title {
    border-bottom-color: #d5d5f6;
}

.timedorbit-slide.typeC {
    background: #4b0082;
}
.timedorbit-slide.typeC .slide-title {
    border-bottom-color: #eaccff;
}

.timedorbit-slide.typeD {
    background: forestgreen;
}
.timedorbit-slide.typeD .slide-title {
    border-bottom-color: #d6f5d6;
}

.timedorbit-slide.typeE {
    background: darkviolet;
}
.timedorbit-slide.typeE .slide-title {
    border-bottom-color: #f0ccff;
}

.timedorbit-slide.typeF {
    background: darkred;
}
.timedorbit-slide.typeF .slide-title {
    border-bottom-color: #ffcccc;
}

.card-section.small {
    padding: 0.25rem;
    font-size: 0.7rem;
}

.float-right.callout {
    margin-left: 0.5rem;
}
.float-left.callout {
    margin-right: 0.5rem;
}

